Fixed bug where Checkbox got squished on small screen

--- a/packages/css/src/components/Checkbox.css
+++ b/packages/css/src/components/Checkbox.css
@@ -2,7 +2,7 @@
   position: relative;
   appearance: none;
   background: white;
-  width: 20px;
+  min-width: 20px;
   height: 20px;
   border: 1px solid var(--color-chatelle);
   border-radius: var(--space-s);
